# CuteAnimationEditor

./: .gitignore  CMakeLists.txt  README.md  chahe.json  config.json  imgui.ini
.github/workflows/: cmake.yml
CuteAnimationEditor/: AnimationAsset.cpp  AnimationAsset.h  Application.cpp  Application.h  ConsoleLog.cpp  ConsoleLog.h  EventManager.h  Group.cpp  Group.h  IcoHolder.cpp  IcoHolder.h  MagicTool.cpp  MagicTool.h  MovePen.cpp  MovePen.h  MoveView.cpp  MoveView.h  Source.cpp  TAP.cpp  TAP.h  Tool.h  Tools.cpp  Tools.h  animaAsset.json  config.json  imgui.ini  myImGui.cpp  myImGui.h  test.json  test2.json
imgui-sfml-2.1/: imconfig.h
include/: AnimationAsset.h  AppColors.h  Application.h  ConsoleLog.h  EventHistory.cpp  EventHistory.h  EventManager.h  FileManager.h  Group.h  IcoHolder.h  MagicTool.h  Math.h  MovePen.h  MoveView.h  SelectionTool.h  SomeConstant.h  TAP.h  Tool.h  Tools.h  helper.h  myImGui.h
src/: AnimationAsset.cpp  Application.cpp  ConsoleLog.cpp  EventManager.cpp  FileManager.cpp  Group.cpp  IcoHolder.cpp  MagicTool.cpp  MovePen.cpp  MoveView.cpp  SelectionTool.cpp  Source.cpp  TAP.cpp  Tool.cpp  Tools.cpp  myImGui.cpp
